fixed table overflow and minor issue with preview

--- a/dump-hub-fe/src/app/upload/upload.component.css
+++ b/dump-hub-fe/src/app/upload/upload.component.css
@@ -33,3 +33,7 @@
 .selected-column {
   background-color: #d7fcd5cc;
 }
+
+.table-container {
+  overflow-x: auto;
+}
